--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -14,6 +14,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: |
+            itzg/minecraft-server
+          tags: |
+            type=ref,event=branch
+            type=ref,event=tag
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
 
@@ -30,6 +40,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: tttfrfr2/echonettester:latest
+          tags: ${{ github.meta.outputs.tags }}
           secrets: |
             "github_token=${{ secrets.GITHUB_TOKEN }}"
+          labels: ${{ github.meta.outputs.labels }}
