--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -23,6 +23,8 @@ jobs:
           tags: |
             type=ref,event=branch
             type=ref,event=tag
+          flavor: |
+            latest=${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
