(CI) setting tag of docker hub

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -21,6 +21,7 @@ jobs:
           images: |
             tttfrfr2/echonettester
           tags: |
+            latest
             type=ref,event=tag
           flavor: |
             latest=${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
