--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -14,18 +14,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v3
-        with:
-          images: |
-            tttfrfr2/echonettester
-          tags: |
-            latest
-            type=ref,event=tag
-          flavor: |
-            latest=${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
 
@@ -37,6 +25,19 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: |
+            future-archtect/vuls
+          tags: |
+            latest
+            type=ref,event=tag
+          flavor: |
+            latest=${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+
 
       - name: Build and push
         uses: docker/build-push-action@v2
