--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -31,7 +31,7 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: |
-            future-archtect/vuls
+            tttfrfr2/echonettester
           tags: |
             latest
             type=ref,event=tag
