--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -26,23 +26,24 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v3
-        with:
-          images: |
-            tttfrfr2/echonettester
-          tags: |
-            latest
-            type=ref,event=tag
-          flavor: |
-            latest=${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+          # - name: Docker meta
+          #   id: meta
+          #   uses: docker/metadata-action@v3
+          #   with:
+          #     images: |
+          #       tttfrfr2/echonettester
+          #     tags: |
+          #       latest
+          #       type=ref,event=tag
+          #     flavor: |
+          #       latest=${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
 
 
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          #tags: ${{ steps.meta.outputs.tags }}
+          tags: latest
           secrets: |
             "github_token=${{ secrets.GITHUB_TOKEN }}"
