--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           push: true
           tags: |
-            tttfrfr2/test:latest
+            tttfrfr2/test:$ {{ github.ref }}
             ${{ steps.meta.outputs.tags }}
           secrets: |
             "github_token=${{ secrets.GITHUB_TOKEN }}"
