--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -31,17 +31,25 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: |
-            tttfrfr/echonettester
+            tttfrfr2/echonettester
           tags: |
             latest
             type=ref,event=tag
+
+      - name: Extract tag name
+        id: tag
+        uses: actions/github-script@0.2.0
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            return context.payload.ref.replace(/\/refs\/tags\//, '');
 
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
           push: true
           tags: |
-            tttfrfr2/test:${{ github.ref }}
+            tttfrfr2/test:${{ steps.tag.outputs.result }}
             ${{ steps.meta.outputs.tags }}
           secrets: |
             "github_token=${{ secrets.GITHUB_TOKEN }}"
