--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -28,7 +28,11 @@ jobs:
 
       - name: Set output
         id: vars
-        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+        run: | 
+          if [ "${{ github.event_name }}" = 'release' ]; then
+            echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+          else
+            echo ::set-output name=tag::latest
 
       - name: Build and push
         uses: docker/build-push-action@v2
