--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -20,14 +20,23 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Set output
-        id: vars
-        run: | 
-          if [ "${{ github.event_name }}" = 'release' ]; then
-            echo ::set-output name=tag::${GITHUB_REF#refs/*/}
-          else
-            echo ::set-output name=tag::latest
-          fi
+      -
+        name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: tttfrfr2/echonettester
+          tags: |
+            type=ref,event=branch
+            type=ref,event=tag
+        #- name: Set output
+        #  id: vars
+        #  run: | 
+        #    if [ "${{ github.event_name }}" = 'release' ]; then
+        #      echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+        #    else
+        #      echo ::set-output name=tag::latest
+        #    fi
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
@@ -40,6 +49,8 @@ jobs:
         with:
           push: true
           tags: |
-            tttfrfr2/echonettester:${{ steps.vars.outputs.tag }}
+            #tttfrfr2/echonettester:${{ steps.vars.outputs.tag }}
+            tttfrfr2/echonettester:latest
+            ${{ step.meta.outputs.tags }}
           secrets: |
             "github_token=${{ secrets.GITHUB_TOKEN }}"
