--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -25,7 +25,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: tttfrfr2/testing
+          images: tttfrfr2/test
           tags: |
             type=ref,event=tag
 
@@ -38,9 +38,12 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
           push: true
+          repository: tttfrfr2/test
           tags: |
-            tttfrfr2/echonettester:latest
+            tttfrfr2/test:latest
             ${{ steps.meta.outputs.tags }}
           secrets: |
             "github_token=${{ secrets.GITHUB_TOKEN }}"
